packages/ui/src/composition/filter-input.module.css
.trigger {
    display: flex;
    width: 100%;
    box-sizing: border-box;
    min-height: 2.25rem;
    min-width: 0;
    align-items: center;
    padding: 0.25rem 0.5rem;
    gap: 0.25rem;
    cursor: text;
    transition: border-color var(--transition-instant),
        box-shadow var(--transition-instant);
    background-color: rgb(var(--color-primary-background)) !important;
}

.badgeContainer {
    flex: 1 1;
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    gap: 0.25rem;
}

.input {
    flex: 1 1;
    min-width: 1rem;
    border: none;
    outline: none;
    background: transparent;
    font-size: 0.875rem;
    font-family: var(--font-playful);
    color: rgb(var(--color-primary-foreground));
    padding: 0;
}

.input::placeholder {
    color: rgb(var(--color-secondary-foreground));
}

.badge {
    cursor: pointer;
}

.icon {
    flex-shrink: 0;
}

.label {
    display: block;
    margin-bottom: 0.25rem;
}

.popover {
    width: var(--radix-popover-trigger-width);
    box-sizing: border-box;
    max-height: 20rem;
    padding: 0.25rem;
}

.list {
    max-height: 18rem;
    overflow-x: hidden;
    overflow-y: auto;
    scroll-padding-top: 0.25rem;
    scroll-padding-bottom: 0.25rem;
    outline: none;
    scrollbar-width: none;
    -ms-overflow-style: none;
}

.list::-webkit-scrollbar {
    display: none;
}

.empty {
    padding: 1.5rem 0;
    text-align: center;
    font-size: 0.875rem;
    color: rgb(var(--color-secondary-foreground));
}

.group {
    overflow: hidden;
    padding: 0.25rem;
    color: rgb(var(--color-primary-foreground));
}

.group :global([cmdk-group-heading]) {
    padding: 0.375rem 0.5rem;
    font-size: 0.75rem;
    font-weight: 500;
    color: rgb(var(--color-secondary-foreground));
}

.item {
    position: relative;
    display: flex;
    cursor: default;
    align-items: center;
    gap: 0.5rem;
    border-radius: var(--size-border-radius);
    padding: 0.375rem 0.5rem;
    font-size: 0.875rem;
    outline: none;
    user-select: none;
    color: rgb(var(--color-primary-foreground));
}

.item[data-selected="true"] {
    background-color: rgb(var(--color-secondary-background));
    color: rgb(var(--color-primary-foreground));
}

.item[data-disabled="true"] {
    pointer-events: none;
    opacity: 0.5;
}

.item svg {
    pointer-events: none;
    flex-shrink: 0;
}

.item[data-selected="true"] svg {
    color: rgb(var(--color-primary-foreground));
}

.checkIcon {
    margin-left: auto;
    width: 1rem;
    height: 1rem;
    opacity: 0;
}

.item[data-checked="true"] .checkIcon {
    opacity: 1;
}

